--- a/covid2020/package.json
+++ b/covid2020/package.json
@@ -4,13 +4,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "gh-pages": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-motion": "^0.5.2",
+    "react-scripts": "3.4.1",
+    "socket.io-client": "^3.0.3"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -34,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "internal-ip": "^6.2.0"
   }
 }
